// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders 1`] = `
<aside
  className="wrapper"
>
  <div
    className="body"
  >
    <span>
      Test
    </span>
  </div>
</aside>
`;

exports[`Card renders a close button 1`] = `
<aside
  className="wrapper"
>
  <div
    className="controls"
  >
    <IconButton
      icon={<CloseIcon />}
      name="close"
      onClick={[MockFunction]}
      variant="light"
    />
  </div>
  <div
    className="body"
  >
    <span>
      Test
    </span>
  </div>
</aside>
`;

exports[`Card renders a light variant 1`] = `
<aside
  className="wrapper light"
>
  <div
    className="body"
  >
    Test
  </div>
</aside>
`;

exports[`Card renders an image 1`] = `
<aside
  className="wrapper dark"
>
  <picture
    className="picture"
  >
    <img
      src="//placehold.it/200x200"
    />
  </picture>
  <div
    className="body"
  >
    <span>
      Test
    </span>
  </div>
</aside>
`;
